2007-03-28  dima  <dima.exe@gmail.com>

	* rails-ws.el (rails-ws:start): added missing parameter the
	rails-ws:default-server-type to startup command

	* rails-scripts.el (rails-script:toggle-output-window): created

	* rails-ws.el (rails-ws:start): fixed bug [#9619], incorect setup of default directory

	* rails-snippets.el (rails-snippets-menu-list): removed
	(rails-snippets:create-keymap, rails-snippets:create-lambda)
	(rails-snippets:list): created

	* rails-lib.el (create-snippets-and-menumap-from-dsl): removed

2007-03-27  dima  <dima.exe@gmail.com>

	* rails-snippets.el (rails-snippets-menu-list): updated snippets,
	add the "assert_template" snippet

	* rails-rake.el (rails-rake:test-current): created
	(rails-rake:run-test-file): created
	(rails-rake:test-current-method): created

	* rails-unit-test-minor-mode.el (rails-unit-test-minor-mode):
	added hotkey [C-c .] to run test of current method

	* rails-functional-test-minor-mode.el (rails-functional-test-minor-mode): 
	added hotkey [C-c .] to run test of current method

	* rails-core.el (rails-core:functional-test-file)
	(rails-core:unit-test-file, rails-core:observer-p)
	(rails-core:mailer-p): allow passing nil
	(rails-core:current-method-name): renamed from rails-core:current-function-name

	* rails-scripts.el (rails-script:output-mode-popup-buffer,
	rails-script:output-mode-push-first-button): created
	(rails-script:output-mode): using hooks instead local-variables

	* rails-rake.el (rails-rake:output-mode): using hooks instead local-variables

	* rails-lib.el (buffer-visible-p): optimization, using `get-buffer-window'

	* rails-model-layout.el (rails-model-layout:switch-to): 
	display message if file not exists

	* rails-controller-layout.el (rails-controller-layout:switch-to):
	display message if file not exists

	* rails-model-layout.el (rails-model-layout:switch-to)
	(rails-model-layout:menu): added migrations support

	* rails-migration-minor-mode.el (rails-migration-minor-mode): popup menu entry
